# ELLIPSIS

./: CMakeLists.txt  ELLIPSIS_environment.yml  README.md  bedtools_environment.yml
scripts/: README.md  STARalign.sh  findKNN.R  getCounts.sh  getFragmentLength.py  getGeneDepth.py  mergeCounts.R  preprocessing.sh  removeReadthrough.sh
src/: CMakeLists.txt  GTFReader.cpp  GTFReader.h  NNLSSolver.cpp  NNLSSolver.h  PSIsolver.cpp  PSIsolver.h  SJCounter.cpp  SJCounter.h  geneInfo.cpp  geneInfo.h  main.cpp  observedDepth.cpp  observedDepth.h  pool.cpp  pool.h  settings.cpp  settings.h  sgedge.cpp  sgedge.h  sgnode.cpp  sgnode.h  spliceGraph.cpp  spliceGraph.h  util.cpp  util.h  var.cpp  var.h
testData/: README.md  TSPAN6.gtf  neighbors.tsv
testData/ELLIPSIS_results/: geneInfo.tsv
testData/ELLIPSIS_results/PSI/: ENSG00000000003.15
testData/ELLIPSIS_results/allJunctionCounts/: ENSG00000000003.15
testData/ELLIPSIS_results/alpha/: ENSG00000000003.15
testData/ELLIPSIS_results/annotGraphs/: ENSG00000000003.15
testData/ELLIPSIS_results/exonDepth/: ENSG00000000003.15
testData/ELLIPSIS_results/filteredCells/: ENSG00000000003.15
testData/ELLIPSIS_results/geneCounts/: ENSG00000000003.15
testData/ELLIPSIS_results/lowQual/: ENSG00000000003.15
testData/alignment/: sample_01.bam  sample_01.bam.bai  sample_01Log.final.out  sample_01Log.out  sample_01SJ.out.tab  sample_02.bam  sample_02.bam.bai  sample_02Log.final.out  sample_02Log.out  sample_02SJ.out.tab  sample_03.bam  sample_03.bam.bai  sample_03Log.final.out  sample_03Log.out  sample_03SJ.out.tab  sample_04.bam  sample_04.bam.bai  sample_04Log.final.out  sample_04Log.out  sample_04SJ.out.tab  sample_05.bam  sample_05.bam.bai  sample_05Log.final.out  sample_05Log.out  sample_05SJ.out.tab
testData/counts/: scCounts.tsv
(+174 files in other folders)
